# tidy2tidy

./: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_tidy2tidy.py
tidy2tidy/: __init__.py
