[tool.poetry]
name = "tidy2tidy"
version = "0.1.0"
description = "Translator between tidypolars(Py) and tidytable(R)"
authors = ["mjkarlsen <matthew.j.carlson00@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
tidypolars = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
